--- a/.github/workflows/bulid.yml
+++ b/.github/workflows/bulid.yml
@@ -37,11 +37,7 @@ jobs:
 
       # ---- Build MAUI App ----
       - name: Publish MAUI app
-        run: |
-          dotnet publish ./StarResonanceDpsAnalysis.MAUI/StarResonanceDpsAnalysis.MAUI.csproj \
-          --configuration Release -p:Platform=x64 --runtime win-x64 --self-contained true \
-          --output ./output/MAUI -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true \
-          -p:PublishTrimmed=true
+        run: dotnet publish ./StarResonanceDpsAnalysis.MAUI/StarResonanceDpsAnalysis.MAUI.csproj --configuration Release -p:Platform=x64 --runtime win-x64 --self-contained true --output ./output/MAUI -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true -p:PublishTrimmed=true
 
       # ---- Build Electron + Blazor App ----
       - name: Build Electron + Blazor app
@@ -53,11 +49,7 @@ jobs:
 
       # ---- Build WPF App ----
       - name: Publish WPF app
-        run: |
-          dotnet publish ./StarResonanceDpsAnalysis.WPF/StarResonanceDpsAnalysis.WPF.csproj \
-          --configuration Release -p:Platform=x64 --runtime win-x64 --self-contained true \
-          --output ./output/WPF -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true \
-          -p:PublishTrimmed=true
+        run: dotnet publish ./StarResonanceDpsAnalysis.WPF/StarResonanceDpsAnalysis.WPF.csproj --configuration Release -p:Platform=x64 --runtime win-x64 --self-contained true --output ./output/WPF -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true -p:PublishTrimmed=true
 
       # List output files (for debugging purposes)
       - name: List output files
